dock-object: emit notify signal in setters

https://bugzilla.gnome.org/show_bug.cgi?id=695972